@@ -14,6 +14,9 @@
    specify the type of sequences being formatted, usually either
    'dna', 'rna', or 'protein'.
 
+ * `prepare-refseqs.pl` now calls the track showing the reference
+   sequence "Reference sequence" instead of "DNA".
+
  * Added a `shareURL` configuration option that accepts a JS function
    to assemble the URL that users will get when clicking the "Share"
    button or the "Full view" link in embedded mode.
